Update all image URLs with new hosted versions

--- a/index.html
+++ b/index.html
@@ -337,20 +337,20 @@
     // FSE Digital Brand Assets - Locked
     const BRAND_ASSETS = {
       companyLogos: [
-        'https://i.ibb.co/Zpdf1RbF/Untitled-design-36.png',
-        'https://i.ibb.co/mCb85rF9/Untitled-design-35.png'
+        'https://i.ibb.co/zHTjFVC7/Untitled-design-36.png',
+        'https://i.ibb.co/7JN0jm5p/Untitled-design-35.png'
       ],
       partnerLogos: [
-        'https://i.ibb.co/Y7chLLXn/google-partner-1.webp',
-        'https://i.ibb.co/3mXSsYbv/images-2.png',
-        'https://i.ibb.co/1ftb3Vrc/MC-Partner-Horizontal-Final-1.png',
-        'https://i.ibb.co/rRYVWydk/semrush-agency-partner-badge-1200x1200.png',
-        'https://i.ibb.co/gMNjJxy2/Met-Business-Partners.png'
+        'https://i.ibb.co/6zp1rRY/MC-Partner-Horizontal-Final-1.png',
+        'https://i.ibb.co/xSp1cn1j/semrush-agency-partner-badge-1200x1200.png',
+        'https://i.ibb.co/dJr0YYJ1/Met-Business-Partners.png',
+        'https://i.ibb.co/LzPVL9nH/google-partner-1.webp',
+        'https://i.ibb.co/67v0z5Ss/images-2.png'
       ],
-      phoneIcon: 'https://i.ibb.co/Kx4cvqDT/1.png',
-      emailIcon: 'https://i.ibb.co/LdsvzGfj/2.png',
-      websiteIcon: 'https://i.ibb.co/FkyRCHsW/3.png',
-      linkedInIcon: 'https://i.ibb.co/fGrTX2v7/4.png'
+      phoneIcon: 'https://i.ibb.co/1fsMfZM7/1.png',
+      emailIcon: 'https://i.ibb.co/DDcQCRyW/2.png',
+      websiteIcon: 'https://i.ibb.co/VccVYVsW/3.png',
+      linkedInIcon: 'https://i.ibb.co/jvDCT7S0/4.png'
     };
 
     async function getFormValues() {
